# chatbot

./: .env.example  .gitignore  CONFIGURATION.md  LICENSE  README.md  chainlit.md  chatbot.sh  pyproject.toml  reindex.sh  reset.sh
.chainlit/: config.toml
.github/: copilot-instructions.md
.github/prompts/: implement-inline-quote-streaming.prompt.md  implement-phase.prompt.md  story-breakdown.prompt.md
.github/workflows/: ci.yml
corpus/: README.md  ai_knowledge_worker.md  ai_knowledge_worker.md.meta.json  bibb_ki_berufsbildung.pdf.meta.json  executive_order_14110.txt  executive_order_14110.txt.meta.json  fraunhofer_ki_prozesse.pdf.meta.json  generate_readme.py  gpts_are_gpts.pdf.meta.json  iab_digitalisierung.pdf.meta.json  imf_gen_ai_future_of_work.pdf.meta.json  weizenbaum_dp_41.pdf.meta.json
doc/: 01-product-scope.md  02-requirements.md  03-architecture.md  04-evaluation-and-testing.md  05-delivery-plan.md  06-evaluation.md  BRAINSTORMING.md
doc/phases/: 07-inline-quote-streaming.md  07.1-evidence-selection-before-answer.md  08-parent-child-retrieval.md  09-citing-model-and-citeable-tools.md  10-session-stable-citation-identifiers.md  11-retrieval-quality.md  12-multi-modal-ingestion.md  13-architecture-review.md
eval/: README.md  run_experiment.py
eval/datasets/: rag_questions.jsonl
public/elements/: LoginForm.jsx
src/app/: ollama_adapter.py  orchestrator.py  protocols.py
src/chatbot/: build_from_settings.py  config.py
src/chatbot/app/: chat_prompts.py  citation_support.py  credential_store.py  orchestrator.py  prompts.py  protocols.py  protocols_citeable_tool.py  tracing.py
src/chatbot/contracts/: __init__.py  chat.py  citation.py  credentials.py  i18n.py  observability.py  process.py  prompts.py  retrieval.py  tools.py
src/chatbot/observability/: __init__.py  openinference.py  schema.py  tracing.py
src/chatbot/tools/: _input_model.py
src/chatbot/ui/: app.py  citation_view.py  composition.py  i18n_messages.py  logging_config.py
src/config/: settings.py
src/ingest/: build_from_settings.py  cli.py  config.py  pipeline.py
src/ingest/app/: __init__.py  _pipeline.py  _vision_prompts.py
src/ingest/cli/: __init__.py  __main__.py
src/ingest/contracts/: __init__.py  converters.py  images.py
src/settings/: __init__.py
src/shared/: __init__.py
src/ui/: app.py
tests/: conftest.py
tests/integration/: test_rag.py
tests/unit/: test_chat_model_profiles.py  test_chat_prompt_profiles.py  test_citation_context.py  test_citation_layer.py  test_citation_layer_parser.py  test_citation_model.py  test_citation_tool.py  test_citeable_retrieval_tool.py  test_citeable_vacation_days_tool.py  test_config_mappers.py  test_credential_store.py  test_document_store_factory.py  test_i18n_messages.py  test_image_pipeline.py  test_inline_quote_parser.py  test_ollama_text_tool_call.py  test_orchestrator.py  test_quote_models.py  test_raw_citation_models.py  test_retrieval_and_ingestion.py  test_settings.py  test_tool_input_model.py  test_tracing.py  test_ui_app_ask_user.py  test_ui_app_stream_formatting.py  test_ui_citation_view.py  test_vacation_days_tool.py  test_vision_ollama.py  test_vision_prompts.py
(+69 files in other folders)
