[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "chatbot"
version = "0.1.0"
description = "Locally-run RAG chatbot using Chainlit, Haystack, Ollama, and Qdrant"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Klas Kalaß" }]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.0",
    "haystack-ai>=2.0",
    "qdrant-haystack>=5.0",
    "ollama>=0.4",
    "openai>=1.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "ollama-haystack>=6.3.0",
    "markdown-it-py>=4.0.0",
    "mdit-plain>=1.0.1",
    "nltk>=3.9.4",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
    "pypdf>=6.10.2",
    "arize-phoenix-otel>=0.16.0",
    "openinference-instrumentation-haystack>=0.1.31",
    "fastembed>=0.8.0",
    "pillow>=11.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
]
eval = [
    "arize-phoenix-client>=0.1",
    "arize-phoenix-evals>=0.22",
    "pandas>=2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
